polychrome: fix some unit test symbol conflicts

This change removes a bunch of symbol conflicts in unit_tests by either
namespacing both instances of the symbol, or by renaming the Cocoa version of
the offending symbol.

Bug: 810479
Change-Id: I3fa69d1adbcd30489fa4b297cb90c96880e52980
Reviewed-on: https://chromium-review.googlesource.com/911710
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536130}