chrome/browser/ui/cocoa/autofill/autofill_popup_view_cocoa_unittest.mm
@@ -25,8 +25,6 @@ namespace {
 
 NSString* const kCreditCardAutofillTouchBarId = @"credit-card-autofill";
 
-}  // namespace
-
 class MockAutofillPopupController : public autofill::AutofillPopupController {
  public:
   MockAutofillPopupController() {
@@ -147,3 +145,5 @@ TEST_F(AutofillPopupViewCocoaUnitTest, CreditCardAutofillTouchBarMetric) {
                                        1);
   }
 }
+
+}  // namespace
