chrome/browser/ui/views/autofill/autofill_popup_view_native_views_unittest.cc
@@ -20,6 +20,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/events/test/event_generator.h"
 #include "ui/views/test/views_test_base.h"
 
+namespace {
+
 struct TypeClicks {
   autofill::PopupItemId id;
   int click;
@@ -185,3 +187,5 @@ INSTANTIATE_TEST_CASE_P(
     /* no prefix */,
     AutofillPopupViewNativeViewsForEveryTypeTest,
     ::testing::ValuesIn(kClickTestCase));
+
+}  // namespace
