chrome/browser/ui/views/bookmarks/bookmark_bar_view_unittest.cc
@@ -36,6 +36,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 using bookmarks::BookmarkModel;
 using bookmarks::BookmarkNode;
 
+namespace {
+
 class BookmarkBarViewTest : public BrowserWithTestWindowTest {
  public:
   BookmarkBarViewTest() {}
@@ -385,3 +387,5 @@ TEST_F(BookmarkBarViewTest, UpdateTooltipText) {
 
   widget.CloseNow();
 }
+
+}  // namespace
